--- a/src/app/resultados/resultados.component.css
+++ b/src/app/resultados/resultados.component.css
@@ -63,3 +63,12 @@ body {
   font-weight: bold;
   color: green;
 }
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
