--- a/src/app/resultados/resultados.component.html
+++ b/src/app/resultados/resultados.component.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-<div class="container">
-  <h2>APUESTAS</h2>
-  <div class="event">
-    <p>XX/XX/20XX</p>
-    <div class="teams">
-      <div class="team team1">
-        <p>TEAM 1</p>
-        <div class="odds">
-          <p>1.53</p>
+  <head>
+  </head>
+  <body>
+
+    <app-header></app-header>
+    <app-nav></app-nav>
+
+    <div class="container">
+      <h2>APUESTAS</h2>
+      <div class="event">
+        <p>XX/XX/20XX</p>
+        <div class="teams">
+          <div class="team team1">
+            <p>TEAM 1</p>
+            <div class="odds">
+              <p>1.53</p>
+              <p>escudo</p>
+            </div>
+          </div>
+          <div class="team team2">
+            <p>TEAM 2</p>
+            <div class="odds">
+              <p>1.50</p>
+              <p>escudo</p>
+            </div>
+          </div>
+        </div>
+        <div class="result">
+          <p>TEAM 2</p>
+          <p>150</p>
           <p>escudo</p>
         </div>
       </div>
-      <div class="team team2">
-        <p>TEAM 2</p>
-        <div class="odds">
-          <p>1.50</p>
-          <p>escudo</p>
-        </div>
+      <div class="event">
+        <!-- Add more events here -->
       </div>
     </div>
-    <div class="result">
-      <p>TEAM 2</p>
-      <p>150</p>
-      <p>escudo</p>
-    </div>
-  </div>
-  <div class="event">
-    <!-- Add more events here -->
-  </div>
-</div>
-</body>
+  </body>
+  <footer>
+    <p>&copy; 2024 Página de Apuestas. Todos los derechos reservados.</p>
+  </footer>
 </html>
