--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -6,22 +6,8 @@
     <title>Página de Apuestas</title>
   </head>
   <body>
-    <header>
-      <img src="assets/betamigofondo.jpg">
-    <h1>APUESTAS</h1>
-      <section class="user-info">
-        <h5>Usuario</h5>
-        <!-- Aquí puedes mostrar la información del usuario, como su saldo, nombre, etc. -->
-      </section>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="inicio.component.html">Apuestas</a></li>
-        <li><a href="resultados.component.html">Resultados</a></li>
-        <li><a href="#">Perfil</a></li>
-        <li><a href="#">Cerrar Sesión</a></li>
-      </ul>
-    </nav>
+   <app-header></app-header>
+    <app-nav></app-nav>
 
     <h1>las apustas van aqui </h1>
     <div class="apuestasdiv">
@@ -29,8 +15,6 @@
     </div>
 
     <main>
-
-
       <section class="betting-section">
         <!-- Aquí puedes colocar el contenido relacionado con las apuestas -->
       </section>
