--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -35,7 +35,7 @@ footer {
   background-color: #333;
   color: #fff;
   padding: 10px;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   text-align: center;
