--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 
 <app-header [selectedImageUrl]="selectedImageUrl"></app-header>
 <app-nav></app-nav>
-<div>
+<div class="perfilusuario">
   <h2>Perfil de Usuario</h2>
   <div class="profile-image">
     <img [src]="selectedImageUrl" alt="Imagen de perfil">
