commit nom perfil

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <h1 class="titulo">BETAMIGO</h1>
   <section class="profile-image">
     <img [src]="selectedImageUrl ? selectedImageUrl : 'favicon.ico'"> <!-- Mostrar la imagen seleccionada o el icono predeterminado -->
-    <h2 class="usuario">{{ userEmail }}</h2>
+    <h2 class="usuario">{{ displayName }}</h2>
     <!-- Aquí puedes mostrar la información del usuario, como su saldo, nombre, etc. -->
   </section>
 </header>
