--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,6 +9,10 @@
       <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password" [(ngModel)]="password" required>
     </div>
+    <div>
+      <label for="username">Nombre:</label>
+      <input type="text" id="username" name="username" [(ngModel)]="displayName">
+    </div>
     <button type="submit">Registrarse</button>
   </form>
 </div>
