--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -5,7 +5,10 @@ nav{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #333333;
+}
+.navegador{
+  border: 2px solid #ffffff;
+  border-radius: 50px;
 }
 .botonesmenu{
   margin-top: 10px;
