comit la imagen del usuario ya se mustra en todas las paginas

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,19 @@
+<!--<header>-->
+<!--  <img class="logo" src="assets/logobetamigo.png">-->
+<!--  <h1 class="titulo">BETAMIGO</h1>-->
+<!--  <section class="profile-image">-->
+<!--    <img [src]="selectedImageUrl ? selectedImageUrl : 'favicon.ico'"> &lt;!&ndash; Mostrar la imagen seleccionada o el icono predeterminado &ndash;&gt;-->
+<!--    <h2 class="usuario">{{ displayName }}</h2>-->
+<!--    &lt;!&ndash; Aquí puedes mostrar la información del usuario, como su saldo, nombre, etc. &ndash;&gt;-->
+<!--  </section>-->
+<!--</header>-->
+
 <header>
   <img class="logo" src="assets/logobetamigo.png">
   <h1 class="titulo">BETAMIGO</h1>
   <section class="profile-image">
-    <img [src]="selectedImageUrl ? selectedImageUrl : 'favicon.ico'"> <!-- Mostrar la imagen seleccionada o el icono predeterminado -->
+    <img [src]="selectedImageUrl ? selectedImageUrl : 'favicon.ico'">
     <h2 class="usuario">{{ displayName }}</h2>
     <!-- Aquí puedes mostrar la información del usuario, como su saldo, nombre, etc. -->
   </section>
 </header>
-
