--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -7,6 +7,7 @@
   </head>
   <body>
   <app-header [selectedImageUrl]="selectedImageUrl"></app-header>
+<!--  <app-header ></app-header>-->
   <app-nav></app-nav>
 
     <h1>las apustas van aqui </h1>
