--- a/src/app/resultados/resultados.component.html
+++ b/src/app/resultados/resultados.component.html
@@ -3,8 +3,8 @@
   <head>
   </head>
   <body>
-
-    <app-header></app-header>
+<!--  <app-header ></app-header>-->
+    <app-header [selectedImageUrl]="selectedImageUrl"></app-header>
     <app-nav></app-nav>
 
     <div class="container">
